<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr3.lab1ui.Lab1UI"
    android:orientation="vertical">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

    <RelativeLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0sp">

        <TextView
            android:id="@+id/nuevoContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuevo_contacto"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nuevoContacto"
            android:inputType="textCapWords|textNoSuggestions"/>

        <EditText
            android:id="@+id/apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nombre"
            android:inputType="textCapWords|textNoSuggestions"/>

        <RadioGroup
            android:id="@+id/radioGroupSexo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/apellido">

            <TextView
                android:id="@+id/sexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textSize="18sp"
                />

            <RadioButton android:id="@+id/femenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femenino"/>

            <RadioButton android:id="@+id/masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"/>
        </RadioGroup>

        <EditText
            android:id="@+id/fechaNacimiento_datePicker"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroupSexo"
            android:layout_alignParentRight="true"
            android:inputType="date"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/fechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nacimiento"
            android:layout_below="@id/radioGroupSexo"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/fechaNacimiento_datePicker"
            android:textSize="18sp"
            />

        <AutoCompleteTextView
            android:id="@+id/pais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pais"
            android:layout_below="@id/fechaNacimiento"
            android:inputType="textCapWords"
            android:paddingTop="20dp"/>

        <EditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:layout_below="@id/pais"
            android:inputType="phone"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/telefono"
            android:inputType="textNoSuggestions"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/direccion"
            android:inputType="textEmailAddress"/>

        <Spinner
            android:id="@+id/hobbies_array"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@id/email"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/seleccionHobbie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hobbie"
            android:textSize="18sp"
            android:layout_below="@id/email"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/hobbies_array"/>

        <CheckBox
            android:id="@+id/favorito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorito"
            android:layout_below="@id/seleccionHobbie"
            android:layout_alignParentRight="true"
            android:layout_toLeftOf="@id/hobbies_array"
            android:checked="false"
            android:textSize="18dp"/>

    </RelativeLayout>
    </ScrollView>

    <ScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">

    <LinearLayout
        android:id="@+id/layoutResultado"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="vertical">

        <Button
            android:id="@+id/botonMostrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mostrar"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="clickValidarMostrar"/>

        <TextView
            android:id="@+id/tituloInfoRecolectada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informacion"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/infoResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="18sp"
            android:layout_below="@id/tituloInfoRecolectada"
            android:visibility="invisible"/>

    </LinearLayout>
    </ScrollView>

</LinearLayout>
